crates/bsnext_input/src/input_test/snapshots/bsnext_input__input_test__com_yaml.snap
---
source: crates/bsnext_input/src/input_test/mod.rs
expression: v
---
[
    V {
        compression: Bool(
            true,
        ),
    },
    V {
        compression: Bool(
            false,
        ),
    },
    V {
        compression: CompType(
            Br,
        ),
    },
    V {
        compression: CompType(
            Gzip,
        ),
    },
    V {
        compression: CompType(
            Zstd,
        ),
    },
    V {
        compression: CompType(
            Deflate,
        ),
    },
]
