crates/bsnext_input/src/input_test/snapshots/bsnext_input__input_test__deserialize_compressions_gzip-2.snap
---
source: crates/bsnext_input/src/input_test/mod.rs
expression: c.get(1).unwrap().opts.compression
---
Some(
    CompType(
        Br,
    ),
)
