crates/bsnext_input/src/input_test/snapshots/bsnext_input__input_test__deserialize_compressions_gzip.snap
---
source: crates/bsnext_input/src/input_test/mod.rs
expression: c.get(0).unwrap().opts.compression
---
Some(
    CompType(
        Gzip,
    ),
)
